se agrega tabla de dias

--- a/src/styles/HomeView.css
+++ b/src/styles/HomeView.css
@@ -1,215 +1,333 @@
 header {
-  position: relative;
-  width: 100%;
-  background-color: #eee;
-  border: 1px solid transparent;
+	position: relative;
+	width: 100%;
+	background-color: #eee;
+	border: 1px solid transparent;
 }
 
 .inputForm {
-  position: relative;
-  width: 46%;
-  height: 100%;
-  margin: 0 auto;
-  white-space: nowrap;
+	position: relative;
+	width: 46%;
+	height: 100%;
+	margin: 0 auto;
+	white-space: nowrap;
 }
 
 .city-input {
-  display: inline-block;
-  width: 85%;
-  border-radius: 25px;
-  border: 0;
-  padding: 5px;
-  margin: 7px 15px;
-  text-align: center;
+	display: inline-block;
+	width: 85%;
+	border-radius: 25px;
+	border: 0;
+	padding: 5px;
+	margin: 7px 15px;
+	text-align: center;
 }
 
-#currentDetails-container-top{
-  width: 100%;
-  line-height: 40px;
-  padding: 0 20px;
-  background-color: rgba(238,238,238,.35);
-  overflow: hidden;
+#currentDetails-container-top {
+	width: 100%;
+	line-height: 40px;
+	padding: 0 20px;
+	background-color: rgba(238, 238, 238, 0.35);
+	overflow: hidden;
 }
 
 #currentDetails {
-  position: relative;
-  text-align: center;
-  left: -10px;
-  white-space: nowrap;
-  font-size: 14px;
-  margin: 0 auto;
-  max-width: 750px;
+	position: relative;
+	text-align: center;
+	left: -10px;
+	white-space: nowrap;
+	font-size: 14px;
+	margin: 0 auto;
+	max-width: 750px;
 }
 
-#currentDetails>div{
-  display: inline-block;
-  text-align: center;
-  margin: 0 10px;
+#currentDetails > div {
+	display: inline-block;
+	text-align: center;
+	margin: 0 10px;
 }
 
 .wind {
-  display: inline-block;
-  text-align: center;
-  margin: 0 10px;
+	display: inline-block;
+	text-align: center;
+	margin: 0 10px;
 }
 
 .label {
-  display: inline-block;
-  text-align: right;
-  font-weight: 500;
-  margin: 0 4px;
+	display: inline-block;
+	text-align: right;
+	font-weight: 500;
+	margin: 0 4px;
 }
 
 .value {
-  display: inline-block;
-  text-align: left;
-  font-weight: 300;
+	display: inline-block;
+	text-align: left;
+	font-weight: 300;
 }
 
 .timeline {
-  display: flex;
-  margin: 30px auto 30px;
-  width: 100%;
-  justify-content: center;
+	display: flex;
+	margin: 30px auto 30px;
+	width: 100%;
+	justify-content: center;
 }
 
 .partly-cloudy {
-  background-color: #d5dae2;
+	background-color: #d5dae2;
 }
 
 .clear {
-  background-color: #eeeef5;
+	background-color: #eeeef5;
 }
 
 .mostly-cloudy {
-  background-color: #b6bfcb;
+	background-color: #b6bfcb;
 }
 
 .possible-light-rain {
-  background-color: #80a5d6;
+	background-color: #80a5d6;
 }
 
 .overcast {
-  background-color: #878f9a;
+	background-color: #878f9a;
 }
 
 .rain {
-  background-color: #4a80c7;
+	background-color: #4a80c7;
 }
 
 .humid-and-overcast {
-  background-color: #566573;
+	background-color: #566573;
 }
 
 .rain-and-humid {
-  background-color: #AED6F1;
+	background-color: #aed6f1;
 }
 
 .humid-and-mostly-cloudy {
-  background-color: #BDC3C7;
+	background-color: #bdc3c7;
 }
 
 .possible-light-rain-and-humid {
-  background-color: #D4E6F1;
+	background-color: #d4e6f1;
 }
 
 .possible-drizzle {
-  background-color: #EAF2F8;
+	background-color: #eaf2f8;
 }
 
 .humid-and-partly-cloudy {
-  background-color: #D5DBDB;
+	background-color: #d5dbdb;
 }
 
 .humid {
-  background-color: #A9DFBF;
+	background-color: #a9dfbf;
 }
 
-.container-nextHours{
-  display: flex;
-  width: 1500px;
-  flex-direction: column;
-  padding: 0;
+.container-nextHours {
+	display: flex;
+	width: 1500px;
+	flex-direction: column;
+	padding: 0;
 }
 
 .container-summary {
-  display: table;
+	display: table;
 }
 
 .container-summary span {
-  display: table-cell;
-  border-top: 1px solid;
-  border-bottom: 1px solid;
-  border: 0;
-  height: 40px;
+	display: table-cell;
+	border-top: 1px solid;
+	border-bottom: 1px solid;
+	border: 0;
+	height: 40px;
 }
 
 .container-hours {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+	display: flex;
+	align-items: flex-start;
+	justify-content: space-between;
 }
 
-.hours-item{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.hours-item {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
-.position-hour{
-  width: 1px;
-  height: 7px;
-  background: black;
+.position-hour {
+	width: 1px;
+	height: 7px;
+	background: black;
 }
 
-.separator-hours{
-  width: 0.5px;
-  height: 15px;
-  background: grey;
+.separator-hours {
+	width: 0.5px;
+	height: 15px;
+	background: grey;
 }
 
-.hours-item-hour{
-  font-size: 10px;
-  font-weight: 500;
+.hours-item-hour {
+	font-size: 10px;
+	font-weight: 500;
 }
 
-.hours-item-temperature{
-  color: #878f9a;
-  font-size: 13px;
+.hours-item-temperature {
+	color: #878f9a;
+	font-size: 13px;
 }
 
-.currentDetails-container-bottom{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  margin: 20px 0;
+.currentDetails-container-bottom {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	margin: 20px 0;
 }
 
-.currentDetails-mostImportant-container{
-  display: flex;
+.currentDetails-mostImportant-container {
+	display: flex;
 }
 
 .currentDetails-mostImportant-container img {
-  width: 60px;
-  height: 60px;
-  margin-right: 10px;
+	width: 60px;
+	height: 60px;
+	margin-right: 10px;
 }
 
-.currentDetails-mostImportant-title span{
-  font-size: 32px;
-  font-weight: 600;
-  text-align: left;
+.currentDetails-mostImportant-title span {
+	font-size: 32px;
+	font-weight: 600;
+	text-align: left;
 }
 
-.currentDetails-mostImportant-subtitle span{
-  margin-right: 15px;
+.currentDetails-mostImportant-subtitle span {
+	margin-right: 15px;
 }
 
 .currentDetails-next {
-  font-size: 28px;
-  font-weight: 300;
-  margin-top: 30px;
+	font-size: 28px;
+	font-weight: 300;
+	margin-top: 30px;
+}
+
+.week {
+	width: 100%;
+	max-width: 830px;
+	margin: 0 auto;
+}
+
+.summary {
+	font-size: 22px;
+	font-weight: 300;
+	text-align: center;
+	margin: 24px 10px;
+}
+
+.day {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	width: 100%;
+	margin: 6px auto 12px;
+}
+
+.skyIcon {
+	display: block;
+	float: left;
+	margin: 7px 5px 0 6px;
+}
+
+.skyIcon img {
+	width: 40px;
+	height: 40px;
+}
+
+.nameDay {
+	width: 50px;
+	font-weight: 700;
+}
+
+.info-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-left: 10px;
+}
+
+.info-extra {
+	margin-top: 10px;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	width: 750px;
+}
+
+.minTemp {
+	display: flex;
+}
+
+.maxTemp {
+	display: flex;
+	text-align: left;
+	margin-left: 7px;
+}
+
+.summary-daily {
+	margin-top: 10px;
+	font-size: 20px;
+	text-align: center;
+}
+
+.sunrise {
+	display: flex;
+	align-items: center;
+}
+
+.sunset {
+	display: flex;
+	align-items: center;
+}
+
+.sunrise img {
+	width: 28px;
+	height: 30px;
+}
+
+.sunset img {
+	width: 28px;
+	height: 30px;
+}
+
+.dailyDetails {
+	display: flex;
+	margin-top: 10px;
+}
+
+.daily-header{
+  display: flex;
+  align-items: center;
+}
+
+.daily-header img{
+  height: 25px;
+  width: 25px;
+  margin-right: 10px;
+}
+
+.daily-header p{
+  margin: 0;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: left;
+}
+
+.container-week{
+  max-width: 830px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 100px;
 }
